%% ============================================
%% ooad-phase:   物件設計
%% chapter:      6-2
%% realizes:     UC-04, UC-05
%% source:       docs/00_Deliverables/System_Manual/chapters/05_需求模型.md（表5-4-1 分析責任）
%% verified:     2026-09-21
%% status:       draft
%% implemented:  partial
%% ai-assisted:  yes / Claude Opus 5 / 依 2026-09-21 決議改用 Mermaid 重繪；classDiagram 以 foreignObject 呈現屬性／方法，需以 kroki /mermaid/png 直接轉檔，不可用 svg+sharp（sharp 內建 resvg 不支援 foreignObject，會產生空白方框）
%% ============================================
%%{init: {'theme':'neutral'}}%%
classDiagram
    direction LR
    class ConversationService {
        +createConversation()
        +postMessage()
    }
    class AskLimitsService {
        +checkDailyLimit()
    }
    class QaService {
        +askQuestion()
    }
    class FaqCacheService {
        +findByExactQuestion()
        +findBySimilarEmbedding()
    }
    class Conversation {
        +courseId
        +history
    }
    class Message {
        +role
        +citations
    }
    class Question {
        +answerStatus
        +matches
    }
    class FAQ {
        +hitCount
    }
    class UsageLog {
        +eventType
    }

    ConversationService --> Conversation
    ConversationService --> AskLimitsService
    ConversationService --> QaService
    QaService --> FaqCacheService
    QaService --> Question
    QaService --> UsageLog
    Conversation "1" --> "0..*" Message : 對話紀錄
    FaqCacheService --> FAQ
    Question "0..*" --> "0..*" FAQ : 命中快取
